--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
-<html>
+<html lang="ua">
   <head>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+      <title>123</title>
   </head>
   <body>
 
-<header>
-    <h1>Мій улюблений персонаж</h1>
-    <h2>я маю багато улюблених персонажів. Один з них:</h2>
-    <h1>Аліса з гри:Alice: Madness Returns</h1>
-  
-</header>
-<main>
-<div class="container">
-    <img src="1000000717.jpg" width="250px" height="350px">
-    <p>Аліса з гри «Аліса в Країні Кошмарів» —створена як темна, спотворена версія класичної Аліси з Країни Див. це молода дівчина, яка страждає від серйозної психічної травми та посттравматичного стресового розладу, що впливає на її сприйняття світу. Її характер поєднує залишки допитливості та уяви з жорстокістю та жорстокістю , що проявляються як наслідок її психологічного стану</p>
-</div>
-  <h5>gfgfgf</h5>
-  <h3>Її риси характеру</h3>
-   <ul>
-       <li>Сміливість</li>
-       <li>Кмітливість</li>
-       <li>Щірість</li>
-       <li>Доброта</li>
-   </ul>
-  <h5>ghfg</h5>
- <h1>Основні риси зовнішності</h1>
- <ul>
-     <li>Волосся: Довге, чорне волосся, що контрастує з традиційним світлим образом.</li>
-     <li>Очі: Блакитні або сірі.</li>
-     <li>Одяг: Вона носить варіації класичної сукні Аліси, але в готичному стилі.</li>
- </ul>
-</main>
-<footer>
-<h6>gtgd</h6>
-    <img src="1000000688.jpg" width="200" height="200">
-<a href="https://youtu.be/NOhcwf8Yj5c?si=vk_ae1HCflaUrkTs">Відеоролик з проходженям гри</a>
-<h6>gtgd</h6>
+        <header>
+            <h1>Мій улюблений персонаж</h1>
+            <h2>я маю багато улюблених персонажів. Один з них:</h2>
+            <h1>Аліса з гри:Alice: Madness Returns</h1>
 
-</footer>
+        </header>
+        <main>
+        <div class="container">
+            <img src="1000000717.jpg" width="250px" height="350px">
+            <p>Аліса з гри «Аліса в Країні Кошмарів» —створена як темна, спотворена версія класичної Аліси з Країни Див. це молода дівчина, яка страждає від серйозної психічної травми та посттравматичного стресового розладу, що впливає на її сприйняття світу. Її характер поєднує залишки допитливості та уяви з жорстокістю та жорстокістю , що проявляються як наслідок її психологічного стану</p>
+        </div>
+          <h5>gfgfgf</h5>
+          <h3>Її риси характеру</h3>
+           <ul>
+               <li>Сміливість</li>
+               <li>Кмітливість</li>
+               <li>Щірість</li>
+               <li>Доброта</li>
+           </ul>
+          <h5>ghfg</h5>
+         <h1>Основні риси зовнішності</h1>
+         <ul>
+             <li>Волосся: Довге, чорне волосся, що контрастує з традиційним світлим образом.</li>
+             <li>Очі: Блакитні або сірі.</li>
+             <li>Одяг: Вона носить варіації класичної сукні Аліси, але в готичному стилі.</li>
+         </ul>
+        </main>
+        <footer>
+        <h6>gtgd</h6>
+            <img src="1000000688.jpg" width="200" height="200">
+        <a href="https://youtu.be/NOhcwf8Yj5c?si=vk_ae1HCflaUrkTs">Відеоролик з проходженям гри</a>
+        <h6>gtgd</h6>
+
+        </footer>
 
   </body>
 </html>
